# clipsense2

./: .gitignore  AI_INTEGRATION_SUCCESS.md  CHANGELOG.md  DEBUG_GUIDE.md  E2E_TESTING_SUMMARY.md  HARDENING_SUMMARY.md  PROJECT_OVERVIEW.md  README.md  TECHNICAL_DOCS.md  debug_videoprocessor.py  debug_visual_api.py  demo_ai_integration.py  demo_test.py  generate_icons.py  package-lock.json  package.json  pytest.ini  quickstart.sh  run_tests.py  setup.sh  test_ai_content_selection.py  test_ai_integration.py  test_background_processing.py  test_background_simple.py  test_export_validation.py  test_setup.py  test_videoprocessor_direct.py  test_visual_analysis.py  test_visual_integration.py
.github/workflows/: e2e-weekly.yml  e2e.yml
app/: index.html  package.json
app/src/: App.tsx  config.ts  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
app/src/components/: FilePicker.tsx  LiveAnalysis.tsx  ProcessingStatus.tsx  ResultDisplay.tsx  (+6 more)
scripts/: test_openai_vision.py
shared/: types.ts
tests/: README.md  conftest.py  e2e_assets.py  e2e_assets.sh  test_autocut_e2e.py  verify_assets.py
worker/: __init__.py  ai_content_selector.py  ai_story_narrative.py  background_processor.py  beat_detection.py  cli.py  config.py  conform.py  emotion_analyzer.py  fcp7_xml_generator.py  ffmpeg_checker.py  main.py  openai_vision.py  requirements.txt  run_dev.py  simple_beat_detector.py  story_arc_creator.py  style_presets.py  timeline.py  video_processor.py  visual_analyzer.py  wedding_object_detector.py
(+3 files in other folders)
