[package]
name = "clipsense-app"
version = "0.1.0"
description = "A Tauri App for ClipSense"
authors = ["you"]
license = ""
repository = ""
default-run = "clipsense-app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [ "window-show", "fs-all", "window-minimize", "window-hide", "shell-open", "path-all", "window-close", "window-maximize", "dialog-all", "window-start-dragging", "window-unmaximize"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
